<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.sonatype.oss</groupId>
    <artifactId>oss-parent</artifactId>
    <version>7</version>
  </parent>

  <groupId>com.lucasluqui</groupId>
  <artifactId>spiralview</artifactId>
  <packaging>jar</packaging>
  <version>2.0.21-SNAPSHOT</version>

  <name>spiralview</name>
  <description>Wrapper for various Three Rings editors for the game Spiral Knights.</description>
  <url>http://github.com/lucasluqui/spiralview</url>
  <issueManagement>
    <url>http://github.com/lucasluqui/spiralview/issues</url>
  </issueManagement>

  <repositories>
    <repository>
      <id>ooo-repo</id>
      <url>https://raw.githubusercontent.com/threerings/maven-repo/master/repository</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>com.formdev</groupId>
      <artifactId>flatlaf</artifactId>
      <version>3.6</version>
    </dependency>
    <dependency>
      <groupId>commons-cli</groupId>
      <artifactId>commons-cli</artifactId>
      <version>1.10.0</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.6</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.12.0</version>
    </dependency>
    <dependency>
      <groupId>org.lwjgl.lwjgl</groupId>
      <artifactId>lwjgl</artifactId>
      <version>2.9.3</version>
    </dependency>
    <dependency>
      <groupId>com.google.code.findbugs</groupId>
      <artifactId>jsr305</artifactId>
      <version>3.0.2</version>
    </dependency>
    <dependency>
      <groupId>com.samskivert</groupId>
      <artifactId>samskivert</artifactId>
      <version>1.9</version>
    </dependency>
    <dependency>
      <groupId>com.threerings</groupId>
      <artifactId>ooo-util</artifactId>
      <version>1.4.1</version>
    </dependency>
    <dependency>
      <groupId>com.threerings</groupId>
      <artifactId>clyde</artifactId>
      <version>1.0.121</version>
    </dependency>

    <!--
      For this local dependency, you must copy 'projectx-pcode.jar' from the game's 'code' directory into the
      project's 'lib' directory, as it would be illegal for us to bundle proprietary software.
    -->
    <dependency>
      <groupId>pcode</groupId>
      <artifactId>pcode</artifactId>
      <version>1.0.0</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/lib/projectx-pcode.jar</systemPath>
    </dependency>
  </dependencies>

  <build>
    <sourceDirectory>src/main/java</sourceDirectory>

    <resources>
      <resource>
        <directory>src/main/resources/</directory>
      </resource>
      <resource>
        <directory>src/main/resources/rsrc/build</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.7.1</version>
        <configuration>
          <archive>
            <manifest>
              <mainClass>com.lucasluqui.spiralview.ViewApp</mainClass> <!-- your main class here -->
            </manifest>
          </archive>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>8</source>
          <target>8</target>
        </configuration>
      </plugin>
    </plugins>

  </build>

  <profiles>
    <!-- For deploying to a local place -->
    <profile>
      <id>deploy-local</id>
      <distributionManagement>
        <repository>
          <id>deploy-local-dir</id>
          <name>Local Maven repository</name>
          <url>file://${deploy.local.dir}</url>
        </repository>
        <snapshotRepository>
          <id>deploy-local-dir</id>
          <name>Local Maven repository</name>
          <url>file://${deploy.local.dir}</url>
        </snapshotRepository>
      </distributionManagement>
    </profile>

  </profiles>
</project>